# XLibCommonPy

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: ci_cd.yml
src/xlib_commonpy/: bundle.py  request.py  time_related.py  tmpworkingdir.py
tests/: test_bundle.py  test_request.py  test_time_related.py  test_tmpworkingdir.py
